Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-74353

Qt Assistant doesn't take stylesheet into account with search result view

XMLWordPrintable

    • All
    • 9f3d2ee5f1621cb23b3297c8b4ef84d8d244b0db (qt/qttools/6.1) e50f433449fb09479dacbc18841b6bfb307913a2 (qt/tqtc-qttools/6.2) 178313751273284b1f0167391af721f006a677c5 (qt/tqtc-qttools/dev) 6db694453636a0f7b8c4f51048f352da80d912d2 (qt/tqtc-qttools/5.15)

      The widget QHelpSearchResultWidget in Assistant displays the search results in HTML but the HTML does not take application stylesheet into account in any way. Default HTML styling for links etc may not look the best against a dark background for example. Please see the image attached.

      Steps to reproduce:

      • Run assistant with additional arg "-stylesheet=dark.stylesheet". Sample stylesheet attached to this ticket.
      • Search for something which would display search results

        1. assistant_dark.PNG
          77 kB
          Miika Pernu
        2. dark.stylesheet
          0.2 kB
          Miika Pernu
        3. image-2021-01-14-10-09-09-852.png
          159 kB
          Tomi Korpipää
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            jkobus Jarek Kobus
            miikapernu Miika Pernu
            Votes:
            1 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved: