Assistant: Rewrite the search result list formatting to use QTextStream

Task-number: QTBUG-74353
Change-Id: Ia1a08949d26bbfa288b83a2553f181c587296d3b
Reviewed-by: Topi Reiniö <topi.reinio@qt.io>
Reviewed-by: Kai Koehne <kai.koehne@qt.io>